--- a/upload/modules/Giveaway/language/en_UK.json
+++ b/upload/modules/Giveaway/language/en_UK.json
@@ -31,5 +31,7 @@
     "general/new_update_available_x": "There is a new update available for the module {{module}}",
     "general/new_urgent_update_available_x": "There is a new urgent update available for the module {{module}}. Please update as soon as possible!",
     "general/current_version_x": "Current module version: {{version}}",
-    "general/new_version_x": "New module version: {{new_version}}"
+    "general/new_version_x": "New module version: {{new_version}}",
+    "admin/confirm_delete_giveaway": "Are you sure you want to delete this giveaway?",
+    "admin/giveaway_deleted_successfully": "Giveaway deleted successfully."
 }
