--- a/upload/modules/Giveaway/language/en_UK.json
+++ b/upload/modules/Giveaway/language/en_UK.json
@@ -1,10 +1,10 @@
 {
     "admin/confirm_delete_giveaway": "Are you sure you want to delete this giveaway?",
-    "admin/giveaway_created": "Giveaway Created",
-    "admin/giveaway_deleted": "Giveaway Deleted",
+    "admin/giveaway_created": "Giveaway created",
+    "admin/giveaway_deleted": "Giveaway deleted",
     "admin/giveaway_deleted_successfully": "Giveaway deleted successfully.",
-    "admin/giveaway_ended": "Giveaway Ended",
-    "admin/giveaway_updated": "Giveaway Updated",
+    "admin/giveaway_ended": "Giveaway ended",
+    "admin/giveaway_updated": "Giveaway updated",
     "admin/user_entry_giveaway": "User entry giveaway",
     "general/active": "Active",
     "general/all_entries": "All Entries",
