--- a/upload/modules/Giveaway/language/en_UK.json
+++ b/upload/modules/Giveaway/language/en_UK.json
@@ -16,21 +16,21 @@
     "general/ends": "Ends",
     "general/ends_x": "Ends: {{ends}}",
     "general/enter_again_in": "You can enter again in {{minutes}} minutes",
-    "general/enter_giveaway": "Enter Giveaway",
+    "general/enter_giveaway": "Enter giveaway",
     "general/entries": "Entries",
     "general/entries_x": "Entries: {{entries}}",
     "general/giveaway": "Giveaway",
     "general/giveaway_already_ended": "The giveaway has already ended!",
     "general/giveaway_created_successfully": "Giveaway created successfully.",
-    "general/giveaway_ends": "Giveaway Ends",
-    "general/giveaway_prize": "Giveaway Prize",
+    "general/giveaway_ends": "Giveaway ends",
+    "general/giveaway_prize": "Giveaway prize",
     "general/giveaway_requires_groups": "You are missing the required {{group}} group to enter this giveaway",
     "general/giveaway_requires_integration": "This giveaway requires you to link your {{integration}} account, You can do this at {{linkStart}}account connections{{linkEnd}}",
     "general/giveaway_updated_successfully": "Giveaway updated successfully.",
-    "general/giveaway_winners": "Giveaway Winners",
+    "general/giveaway_winners": "Giveaway winners",
     "general/id": "ID",
     "general/login_to_enter": "You must login to enter giveaway!",
-    "general/new_giveaway": "New Giveaway",
+    "general/new_giveaway": "New giveaway",
     "general/new_update_available_x": "There is a new update available for the module {{module}}",
     "general/new_urgent_update_available_x": "There is a new urgent update available for the module {{module}}. Please update as soon as possible!",
     "general/new_version_x": "New module version: {{new_version}}",
@@ -38,5 +38,5 @@
     "general/prize": "Prize",
     "general/successfully_entered_giveaway": "You have successfully entered the giveaway",
     "general/winners": "Winners",
-    "general/your_entries_x": "Your Entries: {{entries}}"
+    "general/your_entries_x": "Your entries: {{entries}}"
 }
